CSS inline block flex position

--- a/layout_demo/mikutap/mikutap.html
+++ b/layout_demo/mikutap/mikutap.html
@@ -34,10 +34,10 @@
         }
         .pad-btn:active {
             background-color: rgba(255, 255, 255, 0.3);
-            animation-name: fade-out;
-            animation-duration: 0s;
+            /* animation-name: fade-out;
+            animation-duration: 0s; */
         }
-        @keyframes fade-out {
+        /* @keyframes fade-out {
             0% {
                 background-color: rgba(255, 255, 255, 1);
             }
@@ -53,7 +53,7 @@
             100% {
                 background-color: transparent;
             }
-        }
+        } */
     </style>
 </head>
 <body>
@@ -91,5 +91,16 @@
         <div class="pad-btn"></div>
         <div class="pad-btn"></div>
     </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $(".pad-btn").click(funciton() {
+                
+            })
+        })
+    </script>
+    
 </body>
 </html>
