--- a/layout_demo/5xruby/index.html
+++ b/layout_demo/5xruby/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>五倍紅寶石｜專業程式教育機構｜實戰轉職訓練</title>
   <link rel="stylesheet" href="reset.css">
+  <!-- <link rel="stylesheet" href="style1.css"> -->
   <link rel="stylesheet" href="style2.css">
 </head>
 <body>
@@ -104,9 +105,11 @@
             <div class="item-text">
               <div class="enroll">開放報名中</div>
               <h3>Vue.js 與 Vuex 前端開發實戰課程 - 假日班</h3>
-              <p></p>
-              <p>開課時間</p>
-              <div class="lesson-time"></div>
+              <p class="teacher">講師：許國政 (Kuro Hsu)</p>
+              <div class="lesson-time">
+                <p>開課時間</p>
+                <span>8 月 | 假日班</span>
+              </div>
             </div>
           </div>
         </a>
