--- a/layout_demo/5xruby/index.html
+++ b/layout_demo/5xruby/index.html
@@ -118,10 +118,12 @@
             <img src="images/html-9a8e2291.jpg">
             <div class="item-text">
               <div class="enroll">開放報名中</div>
-              <h3></h3>
-              <p></p>
-              <p>開課時間</p>
-              <div class="lesson-time"></div>
+              <h3>HTML 網頁設計新手村 - 假日班</h3>
+              <p class="teacher">講師：李建杭 (Amos Lee)</p>
+              <div class="lesson-time">
+                <p>開課時間</p>
+                <span>8 月 | 假日班</span>
+              </div>
             </div>
           </div>
         </a>
@@ -130,16 +132,18 @@
             <img src="images/git-e9061a7b.jpg">
             <div class="item-text">
               <div class="enroll">開放報名中</div>
-              <h3></h3>
-              <p></p>
-              <p>開課時間</p>
-              <div class="lesson-time"></div>
+              <h3>ReactJS 與 Webpack 全攻略入門班 - 假日班</h3>
+              <p class="teacher">講師：廖珀均 / 奶綠茶 (Milkmidi)</p>
+              <div class="lesson-time">
+                <p>開課時間</p>
+                <span>9 月 | 假日班</span>
+              </div>
             </div>
           </div>
         </a>
       </div>
       <div class="more">
-        <button>看更多網頁課程</button>
+        <div>看更多網頁課程</div>
       </div>
     </div>
   </div>
@@ -151,15 +155,13 @@
         <h2>網頁課程推薦</h2>
       </div>
       <div class="item-group">
-        <div class="item">
-          <img src="https://picsum.photos/100/100/?random=1">
+        <div class="pic">
+          <img src="images/victor-3ec52916.jpg">
         </div>
-        <div class="item">
-          <p>兄弟不可以圖片研究精靈對方可用開展靈魂旁邊另一個，認識逐步沒事列表複雜都會而在該公司實際上，邀請電視一場困難夏天線上我是衛生輕鬆而已黑暗不得不幫我居民，恢復專用編輯告訴收藏本頁一身，版面辛苦，無疑職。</p>
-          <p class="avatar-name">
-            Victor Lam
-            <span>連續創業家，自由工作者</span>
-          </p>
+        <div class="text">
+          <p class="content">Programmer 最有價值的是經驗值，「五倍紅寶石」的導師都是社群內數一數二的資深 Rubyist，由他們來帶領學員一探 Ruby 世界的神奇之處，實在是最佳選擇。</p>
+          <p class="avatar-name">Victor Lam</p>
+          <span>連續創業家，自由工作者</span>
         </div>
       </div>
     </div>
