5xruby v2 1st layout

--- a/layout_demo/5xruby/index.html
+++ b/layout_demo/5xruby/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>五倍紅寶石｜專業程式教育機構｜實戰轉職訓練</title>
   <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- <link rel="stylesheet" href="style1.css"> -->
   <!-- <link rel="stylesheet" href="style2.css"> -->
   <!-- <link rel="stylesheet" href="style3.css"> -->
@@ -26,7 +27,7 @@
       </div>
       <nav>
           <ul>
-            <li><a href="#"> 線上課程</a></li>
+            <li><a href="#"><i class="fa fa-diamond" aria-hidden="true"></i> 線上課程</a></li>
             <li><a href="#"> ASTRO Camp</a></li>
             <li><a href="#"> 全方位課程</a></li>
             <li><a href="#">短期課程</a></li>
@@ -67,7 +68,8 @@
             <h3>
               頂尖技術
               <br>
-              網頁製作、專案開發</h3>
+              網頁製作、專案開發
+            </h3>
             <p>網站開發到行動裝置 App 工程服務、系統設計開發甚至系統架設，提供專業的建議與頂尖的技術。</p>
           </div>
         </a>
