5xruby layout RWD

--- a/layout_demo/5xruby_v2/index.html
+++ b/layout_demo/5xruby_v2/index.html
@@ -4,33 +4,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>五倍紅寶石｜專業程式教育機構｜實戰轉職訓練</title>
-  <link rel="stylesheet" href="grid.css">
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="css/reset.css"> -->
+  <link rel="stylesheet" href="css/all.css">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   
   <header>
-    <div class="logo">
-      <div class="pic"></div>
-      <p>專業程式教育機構</p>
-    </div>
 
-    <nav>
-      <ul>
-        <li><a href="#">線上課程</a></li>
-        <li><a href="#">ASTRO Camp</a></li>
-        <li><a href="#">全方位課程</a></li>
-        <li><a href="#">短期課程</a></li>
-        <li><a href="#">專案開發</a></li>
-        <li><a href="#">專欄文章</a></li>
-        <li><a href="#">最新消息</a></li>
-      </ul>
-    </nav>
+    <label for="" class="menu-btn">
+      <span>選單</span>
+    </label>
+    
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-xl-3">
+          <div class="logo">
+            <a href="#">
+              <div class="pic">
+                <img src="https://5xruby.tw/assets/images/shared/navbar/logo-c473f739.png" alt="">
+              </div>
+              <p>專業程式教育機構</p>
+            </a>
+          </div>
+        </div>
+        
+        <div class="col-lg-8 col-xl-6">
+          <nav>
+            <ul>
+              <li>
+                <a href="#">
+                  <i class="far fa-gem"></i>
+                  線上課程
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="far fa-compass"></i>
+                  ASTRO Camp
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-bolt"></i>
+                  全方位課程
+                </a>
+                </li>
+              <li>
+                <a href="#">短期課程</a>
+              </li>
+              <li>
+                <a href="#">專案開發</a>
+              </li>
+              <li>
+                <a href="#">專欄文章</a>
+              </li>
+              <li>
+                <a href="#">最新消息</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
   </header>
 
 
 
-  <div class="banner"></div>
+  <div class="banner">
+    <img src="https://5xruby.tw/assets/images/index/banner_astro-a839be5c.jpg" alt="">
+  </div>
   
 
 
@@ -47,46 +91,62 @@
       <div class="row">
         <div class="col-12 col-md-3">
           <div class="item">
-            <img src="https://5xruby.tw/assets/images/index/feature-list/feature-list-img1-0d20ab19.png" alt="">
-            <h3>
-              網頁設計
-              <br>
-              前後端課程教學
-            </h3>
-            <p>帶你掌握程式設計轉職工程師，程式課程從入門到進階讓你快速上手，學員好評推薦轉職課程！</p>
+            <div class="pic">
+              <img src="https://5xruby.tw/assets/images/index/feature-list/feature-list-img1-0d20ab19.png" alt="">
+            </div>
+            <div class="text">
+              <h3>
+                網頁設計
+                <br>
+                前後端課程教學
+              </h3>
+              <p>帶你掌握程式設計轉職工程師，程式課程從入門到進階讓你快速上手，學員好評推薦轉職課程！</p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-3">
           <div class="item">
-            <img src="https://5xruby.tw/assets/images/index/feature-list/feature-list-img2-26e4ca80.png" alt="">
-            <h3>
-              頂尖技術
-              <br>
-              網頁製作、專案開發
-            </h3>
-            <p>網站開發到行動裝置 App 工程服務、系統設計開發甚至系統架設，提供專業的建議與頂尖的技術。</p>
+            <div class="pic">
+              <img src="https://5xruby.tw/assets/images/index/feature-list/feature-list-img2-26e4ca80.png" alt="">
+            </div>
+            <div class="text">
+              <h3>
+                頂尖技術
+                <br>
+                網頁製作、專案開發
+              </h3>
+              <p>網站開發到行動裝置 App 工程服務、系統設計開發甚至系統架設，提供專業的建議與頂尖的技術。</p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-3">
           <div class="item">
-            <img src="https://5xruby.tw/assets/images/index/feature-list/feature-list-img3-d0a4089e.png" alt="">
-            <h3>
-              資訊軟體開發
-              <br>
-              技術顧問
-            </h3>
-            <p>協助您將現有人力快速打造為 Ruby/Rails 團隊，無須經歷繁瑣的人才招募就有即戰力！</p>
+            <div class="pic">
+              <img src="https://5xruby.tw/assets/images/index/feature-list/feature-list-img3-d0a4089e.png" alt="">
+            </div>
+            <div class="text">
+              <h3>
+                資訊軟體開發
+                <br>
+                技術顧問
+              </h3>
+              <p>協助您將現有人力快速打造為 Ruby/Rails 團隊，無須經歷繁瑣的人才招募就有即戰力！</p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-3">
           <div class="item">
-            <img src="https://5xruby.tw/assets/images/index/feature-list/feature-list-img4-13321bf0.png" alt="">
-            <h3>
-              前後端工程師
-              <br>
-              社群經營
-            </h3>
-            <p>Ruby 社群經營、舉辦各類活動，促進 Ruby 社群發展，歡迎前後端工程師分享交流。</p>
+            <div class="pic">
+              <img src="https://5xruby.tw/assets/images/index/feature-list/feature-list-img4-13321bf0.png" alt="">
+            </div>
+            <div class="text">
+              <h3>
+                前後端工程師
+                <br>
+                社群經營
+              </h3>
+              <p>Ruby 社群經營、舉辦各類活動，促進 Ruby 社群發展，歡迎前後端工程師分享交流。</p>
+            </div>
           </div>
         </div>
       </div>
@@ -106,7 +166,7 @@
       </div>
 
       <div class="row">
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-lg-4">
           <a href="#">
             <div class="item">
               <div class="pic">
@@ -125,7 +185,7 @@
           </a>
         </div>
 
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-lg-4">
           <a href="#">
             <div class="item">
               <div class="pic">
@@ -144,7 +204,7 @@
           </a>
         </div>
 
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-lg-4">
           <a href="#">
             <div class="item">
               <div class="pic">
@@ -165,9 +225,9 @@
       </div>
 
       <div class="row">
-        <div class="col-12">
-          <p class="more-btn">看更多網頁課程</p>
-        </div>
+          <a href="#">
+            <p class="more-btn">看更多網頁課程</p>
+          </a>
       </div>
     </div>
   </section>
@@ -194,7 +254,7 @@
         <div class="col-6">
           <div class="item">
             <p class="text">Programmer 最有價值的是經驗值，「五倍紅寶石」的導師都是社群內數一數二的資深 Rubyist，由他們來帶領學員一探 Ruby 世界的神奇之處，實在是最佳選擇。</p>
-            <p class="name"Victor Lam></p>
+            <p class="name">Victor Lam</p>
             <p class="career">連續創業家，自由工作者</p>
           </div>
         </div>
@@ -216,7 +276,7 @@
 
       <div class="row">
         <div class="col-12">
-          <div class="quesion">
+          <div class="question">
             <p>
               您可以看看<a href="#">常見問題</a>或者直接<a href="#">線上洽詢</a>，會有親切的客服人員回答您的問題，
               <br>
@@ -255,67 +315,138 @@
             <div class="pic">
               <img src="https://5xruby.tw/assets/images/shared/footer/5xruby-c62e5f70.svg" alt="">
             </div>
-            <p> 02-2331-5247</p>
-            <p> hi@5xruby.tw</p>
-            <p> 10046 台北市中正區衡陽路 7 號 5 樓</p>
+            <ul>
+              <li>
+                <i class="fas fa-phone-alt"></i>
+                <a href="#">02-2331-5247</a>
+              </li>
+              <li>
+                <i class="fas fa-envelope"></i>
+                <a href="#">hi@5xruby.tw</a>
+              </li>
+              <li>
+                <i class="fas fa-map-marker-alt"></i>
+                <a href="#">10046 台北市中正區衡陽路 7 號 5 樓</a>
+              </li>
+            </ul>
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-6 col-md-2">
-            <div class="item">
-              <h4>我們的課程</h4>
-              <a href="#">ASTRO Camp</a>
-              <a href="#">線上課程</a>
-              <a href="#">全方位課程</a>
-              <a href="#">短期課程</a>
+        <div class="col-md-8">
+          <div class="row footer-list">
+            <div class="col-6 col-md-2">
+              <div class="item">
+                <h4>我們的課程</h4>
+                <ul>
+                  <li>
+                    <a href="#">ASTRO Camp</a>
+                  </li>
+                  <li>
+                    <a href="#">線上課程</a>
+                  </li>
+                  <li>
+                    <a href="#">全方位課程</a>
+                  </li>
+                  <li>
+                    <a href="#">短期課程</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
 
-          <div class="col-6 col-md-2">
-            <div class="item">
-              <h4>服務項目</h4>
-              <a href="#">專案開發</a>
-              <a href="#">企業代訓</a>
-              <a href="#">空間租借</a>
+            <div class="col-6 col-md-2">
+              <div class="item">
+                <h4>服務項目</h4>
+                <ul>
+                  <li>
+                    <a href="#">專案開發</a>
+                  </li>
+                  <li>
+                    <a href="#">企業代訓</a>
+                  </li>
+                  <li>
+                    <a href="#">空間租借</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
-
-          <div class="col-6 col-md-2">
-            <div class="item">
-              <h4>關於我們</h4>
-              <a href="#">關於我們</a>
-              <a href="#">媒體報導</a>
-              <a href="#">團隊成員</a>
-              <a href="#">專欄文章</a>
-              <a href="#">最新消息</a>
+  
+            <div class="col-6 col-md-2">
+              <div class="item">
+                <h4>關於我們</h4>
+                <ul>
+                  <li>
+                    <a href="#">關於我們</a>
+                  </li>
+                  <li>
+                    <a href="#">媒體報導</a>
+                  </li>
+                  <li>
+                    <a href="#">團隊成員</a>
+                  </li>
+                  <li>
+                    <a href="#">專欄文章</a>
+                  </li>
+                  <li>
+                    <a href="#">最新消息</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
-
-          <div class="col-6 col-md-2">
-            <div class="item">
-              <h4>聯絡我們</h4>
-              <a href="#">聯絡詢價</a>
-              <a href="#">工作機會</a>
+  
+            <div class="col-6 col-md-2">
+              <div class="item">
+                <h4>聯絡我們</h4>
+                <ul>
+                  <li>
+                    <a href="#">聯絡詢價</a>
+                  </li>
+                  <li>
+                    <a href="#">工作機會</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
-
-          <div class="col-6 col-md-2">
-            <div class="item">
-              <h4>幫助與政策</h4>
-              <a href="#">常見問題</a>
-              <a href="#">隱私權政策</a>
-              <a href="#">服務條款</a>
+  
+            <div class="col-6 col-md-2">
+              <div class="item">
+                <h4>幫助與政策</h4>
+                <ul>
+                  <li>
+                    <a href="#">常見問題</a>
+                  </li>
+                  <li>
+                    <a href="#">隱私權政策</a>
+                  </li>
+                  <li>
+                    <a href="#">服務條款</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
-
-          <div class="col-6 col-md-2">
-            <div class="item">
-              <h4>追蹤</h4>
-              <a href="#">Facebook</a>
-              <a href="#">GitHub</a>
-              <a href="#">Line@</a>
-              <a href="#">Twitter</a>
+  
+            <div class="col-6 col-md-2">
+              <div class="item">
+                <h4>追蹤</h4>
+                <ul>
+                  <li>
+                    <i class="fab fa-facebook-square"></i>
+                    <a href="#">Facebook</a>
+                  </li>
+                  <li>
+                    <i class="fab fa-github"></i>
+                    <a href="#">GitHub</a>
+                  </li>
+                  <li>
+                    <i class="fab fa-line"></i>
+                    <a href="#">Line@</a>
+                  </li>
+                  <li>
+                    <i class="fab fa-twitter"></i>
+                    <a href="#">Twitter</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -328,6 +459,25 @@
       </div>
     </div>
   </footer>
+
+  <div class="sticker">
+    <a href="#">
+      <i class="fab fa-facebook-messenger fa-4x"></i>
+    </a>
+    <a href="#">
+      <i class="fas fa-chevron-circle-up fa-3x"></i>
+    </a>
+  </div>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('.menu-btn').click(function() {
+        $('nav').toggle();
+      });
+    });
+  </script>
   
 </body>
 </html>
