--- a/layout_demo/0720_layout/credit/credit.html
+++ b/layout_demo/0720_layout/credit/credit.html
@@ -556,8 +556,81 @@
     </div>
   </div>
 
+  <div class="container">
+    <div class="row">
+      <!-- 彰化 -->
+      <section class="col-12 col-md-6">
+        <a href="#">
+          <div class="item">
+            <div class="main-content">
+              <div class="bank">
+                <img src="https://s.yimg.com/zp/ActivityImages/3ADD6517FD-134888.png" alt="">
+              </div>
+  
+              <div class="text">
+                <ul>
+                  <li>
+                    <span>[全月]單筆滿6000・送<!--
+                    --><span class="strong">300</span><!--
+                    -->刷卡金</span>
+                  </li>
+                  <li>
+                    <span>[全月]單筆滿3萬・送<!--
+                    --><span class="strong">2100</span><!--
+                    -->刷卡金</span>
+                    <span class="full">額滿</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="footer">
+              <span>需登錄，限量名額</span>
+              <span class="detail">詳情></span>
+            </div>
+          </div>
+        </a>
+      </section>
+
+      <!-- 台新 -->
+      <section class="col-12 col-md-6">
+        <a href="#">
+          <div class="item">
+            <div class="main-content">
+              <div class="bank">
+                <img src="https://s.yimg.com/zp/ActivityImages/F13A3E0926-134888.png" alt="">
+              </div>
+  
+              <div class="text">
+                <ul>
+                  <li>
+                    <span>刷@GoGo卡最高享數位通路<!--
+                      --><span class="strong">3%</span><!--
+                    -->現金優惠</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="footer">
+              <span>需登錄，限分期，限量名額</span>
+              <span class="detail">詳情></span>
+            </div>
+          </div>
+        </a>
+      </section>
+    </div>
+  </div>
 
 
+  
+  <div class="gap"></div>
+  <footer>
+    <div class="careful">
+      <h1>謹 慎 理 財</h1>
+      <h1>信 用 至 上</h1>
+    </div>
+  </footer>
 
 </body>
 </html>
