--- a/layout_demo/0720_layout/vocus/vocus.html
+++ b/layout_demo/0720_layout/vocus/vocus.html
@@ -457,7 +457,7 @@
               <p>
                 <a href="#">王立第二戰研所</a>
              </p>
-              <span>發佈於<a href="#" class="from"></a>王立第二戰研所</a></span>
+              <span>發佈於<a href="#" class="from">王立第二戰研所</a></span>
             </div>
             <div class="like">
               <a href="#">
