--- a/layout_demo/toyota_v2/index.html
+++ b/layout_demo/toyota_v2/index.html
@@ -14,7 +14,7 @@
         <div class="col-12">
           <!-- title-group -->
           <div class="row">
-            <div class="col-10 col-md-9 title-group">
+            <div class="col-10 col-lg-5 title-group">
               <div class="main-title">
                 <p>01</p>
                 <h2>操控樂趣</h2>
@@ -27,8 +27,8 @@
           </div>
 
           <!-- mv-group -->
-          <div class="row">
-            <div class="col-11">
+          <div class="row mv-row">
+            <div class="col-11 col-lg-9">
               <div class="mv-group">
                 <a href="#">
                   <div class="main-mv">
@@ -41,8 +41,8 @@
           </div>
 
           <!-- text -->
-          <div class="row">
-            <div class="col-11">
+          <div class="row text-row">
+            <div class="col-11 col-lg-10">
               <div class="text">
                 <span>因為我們做了這些革新</span>
                 <h4>低重心設計</h4>
@@ -65,5 +65,223 @@
     </div>
   </section>
   
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <!-- title-group -->
+          <div class="row">
+            <div class="col-10 col-lg-5 title-group">
+              <div class="main-title">
+                <p>02</p>
+                <h2>安全守護</h2>
+              </div>
+              <div class="main-content">
+                <h3>行車更安心的高剛性車體</h3>
+                <p>您的愛車會妥善保護您，強悍穩固的車身可使您安全無虞。世界級的安全科技讓你輕鬆自如享受旅程、毫無後顧之憂。</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- mv-group -->
+          <div class="row mv-row">
+            <div class="col-11 col-lg-9">
+              <div class="mv-group">
+                <a href="#">
+                  <div class="main-mv">
+                    <img src="https://picsum.photos/800/500/?random=1">
+                  </div>
+                  <div class="play-btn"></div>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- text -->
+          <div class="row text-row">
+            <div class="col-11 col-lg-10">
+              <div class="text">
+                <span>因為我們做了這些革新</span>
+                <h4>主動安全</h4>
+                <p>
+                  以先進的 TSS 系統，主動偵測路況，輔助駕駛判斷路況並維持行車安全。
+                </p>
+                <h4>被動安全</h4>
+                <p>
+                  堅固的高剛性車體，使用熱沖壓材料的高強度抗扭鋼板，強化座艙對意外事故的保護力。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <!-- title-group -->
+          <div class="row">
+            <div class="col-10 col-lg-5 title-group">
+              <div class="main-title">
+                <p>03</p>
+                <h2>乘坐舒適</h2>
+              </div>
+              <div class="main-content">
+                <h3>令人放鬆舒適的車室空間</h3>
+                <p>車室空間設計著重人體工學，透過方向盤、踏板等位置優化，追求更舒適的駕駛位置，並以新型座椅設計，提高座椅包覆性，致力實現長途駕駛不疲勞的舒適駕馭體驗。</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- mv-group -->
+          <div class="row mv-row">
+            <div class="col-11 col-lg-9">
+              <div class="mv-group">
+                <a href="#">
+                  <div class="main-mv">
+                    <img src="https://picsum.photos/800/500/?random=1">
+                  </div>
+                </a>
+                  <div class="play-btn"></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- text -->
+          <div class="row text-row">
+            <div class="col-11 col-lg-10">
+              <div class="text">
+                <span>因為我們做了這些革新</span>
+                <h4>駕駛位置最佳化</h4>
+                <p>
+                  針對駕駛位置進行徹底的修改，讓駕馭者可如同握手般自然且舒適的操控方向盤。
+                </p>
+                <h4>駕馭視野佳</h4>
+                <p>
+                  考量駕駛坐進車內的高度，透過前擋風玻璃位置的調整，達到盲區極小化，使駕駛視野更開闊，同步提升駕馭安全。
+                </p>
+                <h4>更寧靜的車室</h4>
+                <p>
+                  採用最新三層結構的隔音材料，與引勤、變速箱的零件改革，將座艙的震動抑制在最小限度，提供乘客舒適安靜的感受。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <!-- title-group -->
+          <div class="row">
+            <div class="col-10 col-lg-5 title-group">
+              <div class="main-title">
+                <p>04</p>
+                <h2>以人為本</h2>
+              </div>
+              <div class="main-content">
+                <h3>使用者導向的貼心設計</h3>
+                <p>藉由高度人性化的介面整合、傳遞車輛資訊，豐富日常駕駛體驗。從提升油耗表現到行李廂空間最適化，均細心考量，更加貼近使用者真正所需與習慣，並給予即時回應。</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- mv-group -->
+          <div class="row mv-row">
+            <div class="col-11 col-lg-9">
+              <div class="mv-group">
+                <a href="#">
+                  <div class="main-mv">
+                    <img src="https://picsum.photos/800/500/?random=1">
+                  </div>
+                </a>
+                  <div class="play-btn"></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- text -->
+          <div class="row text-row">
+            <div class="col-11 col-lg-10">
+              <div class="text">
+                <span>因為我們做了這些革新</span>
+                <h4>優異油耗表現</h4>
+                <p>
+                  以 AURIS 為例，更強勁的高效引擎將熱效率提升至 40%，達到世界水準，屢屢突破燃油效率新境界。
+                </p>
+                <h4>行李箱空間最適化</h4>
+                <p>
+                  以 PRIUS 為例，透過將電池位置移到後座下方，讓行李廂擁有更大的空間。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <!-- title-group -->
+          <div class="row">
+            <div class="col-10 col-lg-5 title-group">
+              <div class="main-title">
+                <p>05</p>
+                <h2>引以為傲</h2>
+              </div>
+              <div class="main-content">
+                <h3>極具吸引力的精心設計</h3>
+                <p>TNGA 車款擁有讓人忍不住回頭的新潮外觀、讓駕駛充滿自信的駕馭快感！不僅讓車主能展現個人風格，也能讓擁有者都能引以為傲。</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- mv-group -->
+          <div class="row mv-row">
+            <div class="col-11 col-lg-9">
+              <div class="mv-group">
+                <a href="#">
+                  <div class="main-mv">
+                    <img src="https://picsum.photos/800/500/?random=1">
+                  </div>
+                </a>
+                  <div class="play-btn"></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- text -->
+          <div class="row text-row">
+            <div class="col-11 col-lg-10">
+              <div class="text">
+                <span>因為我們做了這些革新</span>
+                <h4>設計概念</h4>
+                <p>
+                  TNGA 低重心設計，不僅呈現更低伏的運動化外觀，更講究高品質內裝的一致性。
+                </p>
+                <h4>環保概念</h4>
+                <p>
+                  為了對環境保護盡一份心力，我們全面提升傳統引擎、變速箱與油電複合動力的動力效能。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
 </body>
 </html>
