--- a/layout_demo/5xruby_v2/index.html
+++ b/layout_demo/5xruby_v2/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/all.css">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/style.css">
+  <!--! 合併成一個 css 檔案會比較省 request -->
 </head>
 <body>
   
